batch predictions on flask

--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -18,9 +18,7 @@
     <link href="../static/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/starter-template.css" rel="stylesheet">
-    <link href="../static/css/grid.css" rel="stylesheet">
-    <link href="../static/css/theme.css" rel="stylesheet">
+    <link href="../static/starter-template.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -34,24 +32,6 @@
   </head>
 
   <body>
-    <style>
-      [data-stat="confirmed"]{
-          background-color: #b6f0b7;
-      }
-      [data-stat="unconfirmed"]{
-          background-color: #e6a9a9;
-      }
-      @media (min-width: 768px) {
-        .is-table-row {
-          display: table;
-          }
-          .is-table-row [class*="col-"] {
-            float: none;
-            display: table-cell;
-            vertical-align: top;
-          }
-      }
-    </style>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -62,12 +42,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Pesticides Analysis</a>
+          <a class="navbar-brand" href="#">Project name</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="/batch_predict">Batch</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -79,113 +59,6 @@
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-      
-      
-        <div class="row">
-          <div class="col-md-3">
-            <h3>Evaluate Batch</h3>
-            <form action = "/" method = "POST">
-              <input type = "submit" name = "file" />
-              <input type = "submit"/>
-            </form>
-          </div>
-
-          <div class="col-md-6">
-            <h3>Batch Performance</h3>
-            <div class="row is-table-row">
-              {% if controls_df.shape[0] > 0 %}
-              <div class="col-md-6" data-stat="unconfirmed">
-              {% else %}
-              <div class="col-md-6" data-stat="confirmed">
-              {% endif %}
-                <h4>Controls</h4>
-                <p>Incorrect: {{controls_df.shape[0]}}</p>
-                <table class="table table-condensed">
-                  <thead>
-                    <tr>
-                      <th>#</th>
-                      <th>Sample</th>
-                      <th>Analyte</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    {% for index, row in controls_df.iterrows() %}
-                    <tr>
-                      <td class="text-left">{{index}}</td>
-                      <td class="text-left">{{row['Sample Name']}}</td>
-                      <td class="text-left">{{row['Analyte Peak Name']}}</td>
-                    </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
-              </div>
-              {% if blanks_df.shape[0] > 0 %}
-              <div class="col-md-6" data-stat="unconfirmed">
-              {% else %}
-              <div class="col-md-6" data-stat="confirmed">
-              {% endif %}
-                <h4>Blanks</h4>
-                <p>Incorrect: {{blanks_df.shape[0]}}</p>
-                <table class="table table-condensed">
-                  <thead>
-                    <tr>
-                      <th>#</th>
-                      <th>Sample</th>
-                      <th>Analyte</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    {% for index, row in blanks_df.iterrows() %}
-                    <tr>
-                      <td class="text-left">{{index}}</td>
-                      <td class="text-left">{{row['Sample Name']}}</td>
-                      <td class="text-left">{{row['Analyte Peak Name']}}</td>
-                    </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
-              </div>
-            </div>
-            <div class="page-header">
-              <h4>Chromatograms Requiring Visual Inspection</h4>
-            </div>
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Sample Name</th>
-                  <th>Analyte Name</th>
-                </tr>
-              </thead>
-              <tbody>
-                {% for index, row in sample_df.iterrows() %}
-                <tr>
-                  <td class="text-left">{{index}}</td>
-                  <td class="text-left">{{row['Sample Name']}}</td>
-                  <td class="text-left">{{row['Analyte Peak Name']}}</td>
-                </tr>
-                {% endfor %}
-              </tbody>
-            </table>
-          </div>
-          <div class="col-md-3">
-            <h3>Model Performance</h3>
-            <h4>Business Metrics</h4>
-            <div class="row">
-              <img src="/static/images/profit_curve.png" class="img-thumbnail" alt="Profit curve: profit per sample vs threshold">
-            </div>
-            <h4>Data Metrics</h4>
-            <div class="row">
-              <img src="/static/images/learning.png" class="img-thumbnail" alt="Learning curve comparining training performance and test peformance for increasing number of data points">
-            </div>
-            <div class="row">
-              <img src="/static/images/bar_confusion.png" class="img-thumbnail" alt="Bar chart of classifications">
-            </div>
-              <div class="row">
-              <img src="/static/images/boost_rand_comp.png" class="img-thumbnail" alt="F1 score plotted agains threshold">
-            </div>
-          </div>
-        </div>
       </div>
 
     </div><!-- /.container -->
